# easy-IP

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  easy-ip.cpp  easy-ip.h  first_order_solver.cpp  first_order_solver.h  plot_first_order.py
examples/: CMakeLists.txt  booking.cpp  booking2.cpp  knapsack.cpp  nurses.cpp  parking.cpp  run_nurses.py  sat.cpp  shift_scheduling.cpp  simple_example.cpp  string_utils.h  sudoku.cpp  transportation.cpp
source/: constraint_programming.cpp  easy-ip-internal.h  first_order_solver.cpp  integer_programming.cpp  satisfiability.cpp
tests/: CMakeLists.txt  test_constraint_programming.cpp  test_first_order_solver.cpp  test_generate_subsets.cpp  test_ip.cpp  test_logical_expression.cpp  test_sat.cpp  test_sum.cpp
