# Author: petter.strandmark@gmail.com (Petter Strandmark)

MACRO (CREATE_EXAMPLE NAME)
  ADD_EXECUTABLE(${NAME}
                 ${NAME}.cpp
                 ${EASYIP_HEADERS})
  TARGET_LINK_LIBRARIES(${NAME} easyip)
ENDMACRO (CREATE_EXAMPLE)

FILE(GLOB EXAMPLE_FILES *.cpp)
FOREACH (EXAMPLE_FILE ${EXAMPLE_FILES})
	GET_FILENAME_COMPONENT(EXAMPLE_NAME ${EXAMPLE_FILE} NAME_WE)
	MESSAGE("-- Adding example: " ${EXAMPLE_NAME})
	CREATE_EXAMPLE(${EXAMPLE_NAME})
ENDFOREACH()
