# Author: petter.strandmark@gmail.com (Petter Strandmark)

MACRO (CREATE_EXAMPLE NAME)
  ADD_EXECUTABLE(${NAME}
                 ${NAME}.cpp
                 ${EASYIP_HEADERS})
  TARGET_LINK_LIBRARIES(${NAME} easyip)
  SET_PROPERTY(TARGET ${NAME}         PROPERTY FOLDER "Examples")
ENDMACRO (CREATE_EXAMPLE)

FILE(GLOB EXAMPLE_FILES *.cpp)
FOREACH (EXAMPLE_FILE ${EXAMPLE_FILES})
	GET_FILENAME_COMPONENT(EXAMPLE_NAME ${EXAMPLE_FILE} NAME_WE)
	MESSAGE("-- Adding example: " ${EXAMPLE_NAME})
	CREATE_EXAMPLE(${EXAMPLE_NAME})
ENDFOREACH()

configure_file(run_nurses.py ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/run_nurses.py COPYONLY)

add_test(NAME nurses.N25.1 COMMAND nurses ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/NSPLib/N25/1.nsp ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/NSPLib/Cases/1.gen ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/NSPLib/N25/1.sol)
